--- a/src/components/ImageGallery/ImageGallery.css
+++ b/src/components/ImageGallery/ImageGallery.css
@@ -11,10 +11,51 @@
   border: 1px solid #d4d4d4;
   margin: 1rem;
   border-radius: 3px;
+  position: relative;
 }
 .card-image {
   width: 100%;
   height: 100%;
   object-fit: cover;
   border-radius: 3px;
+  transition: filter 0.3s ease;
+}
+.card-checkbox {
+  display: none;
+  position: absolute;
+  top: 1rem;
+  left: 1rem;
+}
+/* image card brightness will be darker on hover  */
+.image-card-container:hover .card-image {
+  filter: brightness(0.6);
+}
+/* card-checkbox input will show only when hover and selected */
+.image-card-container:hover .card-checkbox,
+.card-checkbox:checked {
+  display: block;
+}
+/* image card brightness will be slightly darker on select */
+.image-card-container.checked .card-image {
+  filter: brightness(0.8);
+}
+
+.add-img-card-container {
+  border: 1px dashed #d4d4d4;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: #f9f9f9;
+}
+#add-image-input {
+  display: none;
+}
+#Capa_1 {
+  border-radius: 2px;
+}
+.add-img-card-container label {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
 }
