--- a/src/components/ImageGallery/ImageGallery.css
+++ b/src/components/ImageGallery/ImageGallery.css
@@ -1,15 +1,33 @@
 .image-gallery-container {
   padding: 2rem;
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+  grid-template-columns: repeat(5, 1fr);
+  gap: 1rem;
+
+  @media (max-width: 992px) {
+    grid-template-columns: repeat(3, 1fr);
+  }
+  @media (max-width: 768px) {
+    /* For tablets, reduce to 2 columns */
+    grid-template-columns: 1fr 1fr;
+  }
+
+  @media (max-width: 480px) {
+    /* For mobile devices, reduce to 1 column */
+    grid-template-columns: 1fr;
+  }
 }
-.image-card-container:first-child {
-  grid-column: span 2;
-  grid-row: span 2;
+
+@media (min-width: 768px) {
+  .image-card-container:first-child {
+    grid-column: span 2;
+    grid-row: span 2;
+  }
 }
+
 .image-card-container {
   border: 1px solid #d4d4d4;
-  margin: 1rem;
+  height: 100%;
   border-radius: 3px;
   position: relative;
 }
