--- a/src/components/ImageGallery/TopBar/TopBar.css
+++ b/src/components/ImageGallery/TopBar/TopBar.css
@@ -12,7 +12,10 @@
   border: none;
   background: transparent;
   color: rgb(190, 45, 45);
-  font-size: 1.1rem;
+  font-size: 1rem;
   font-weight: 600;
   cursor: pointer;
+}
+.delete-button:hover {
+  text-decoration: underline;
 }
